# ai_25_dl

./: .gitignore  pyproject.toml
hw01/: aakazachinskiy_hw01.ipynb
hw03/: aakazachinskiy_hw03.ipynb  dataset.py  model.py  train.py
